# tam-rs

./: Cargo.toml  README.md
src/: errors.rs  execute.rs  lib.rs  main.rs
src/execute/: mod.rs  primitive.rs  tests.rs
tests/: simple_cpu_cycle_test.rs
tests/common/: mod.rs
